# custom-finder

./: README.md  index.html  package-lock.json  package.json  vite.config.ts  배포-설치안내.md
docs/superpowers/plans/: 2026-06-30-memo-rich-text-editor.md
docs/superpowers/specs/: 2026-06-18-custom-finder-design.md  2026-06-22-floating-mini-todo-design.md  2026-06-22-todo-tab-design.md  2026-06-24-calendar-design.md  2026-06-24-list-view-design.md  2026-06-24-move-into-out-of-folder-design.md  2026-06-25-todo-due-on-calendar-design.md  2026-06-26-event-labels-design.md  2026-06-30-memo-rich-text-editor-design.md
scripts/: build-named.sh  release.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: eventStore.ts  import.ts  miniWindow.ts  store.ts  todoStore.ts  todoSync.ts
src/components/: AddMenu.tsx  CalendarPanel.tsx  ContextMenu.tsx  EventDialog.tsx  ImageViewer.tsx  ItemCard.tsx  LinkDialog.tsx  MainPanel.tsx  MiniTodo.tsx  MoveDialog.tsx  Sidebar.tsx  TextEditor.tsx  TodoPanel.tsx  ViewMenu.tsx  dnd.ts  icons.tsx  services.ts
src/core/: bundle.test.ts  bundle.ts  dom.test.ts  dom.ts  event.test.ts  event.ts  links.test.ts  links.ts  search.test.ts  search.ts  sort.test.ts  sort.ts  text.test.ts  text.ts  todo.test.ts  todo.ts  tree.test.ts  tree.ts  types.ts  view.test.ts  view.ts
